Added styles to tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,20 +11,20 @@ set -g status-left-length 60
 set -g status-right-length 120
 
 # Left side
-set -g status-left '#[bg=colour124,fg=colour255] #S #[fg=colour124,bg=colour130]#[fg=black,bg=colour130] #(whoami) #[fg=colour130,bg=default] '
+set -g status-left '#[bg=default,fg=colour242]#[bg=colour242,fg=colour252]#S #[fg=colour242,bg=colour144]#[fg=colour236,bg=colour144] #(whoami) #[fg=colour144,bg=default] '
 
 # Right side
-set -g status-right '#[fg=cyan,bg=default]#[fg=black,bg=cyan] %Y-%m-%d #[fg=blue,bg=cyan]#[fg=black,bg=blue] %H:%M:%S '
+set -g status-right '#[fg=colour144,bg=default]#[fg=colour236,bg=colour144] %Y-%m-%d #[fg=colour242,bg=colour144]#[fg=colour252,bg=colour242] %H:%M#[fg=colour242,bg=default]'
 
 # General styling
 set -g status-style bg=default,fg=white
 
 # Inactive Window styles
 setw -g window-status-format \
-  '#[fg=colour68,bg=colour235]#[fg=colour16,bg=colour68,bold] #I:#W #[fg=colour68,bg=colour235]'
+  '#[fg=colour144,bg=default]#[fg=colour144,bg=default] #I  #W #[fg=colour144,bg=default]'
 
 # Active Window styles
 setw -g window-status-current-format \
-  '#[fg=colour45,bg=colour235]#[fg=colour16,bg=colour45,bold] #I:#W #[fg=colour45,bg=colour235]'
+  '#[fg=colour144,bg=default]#[fg=colour236,bg=colour144,bold] #I  #W #[fg=colour144,bg=default]'
 
 
