--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,22 +9,23 @@ set -g status-position top
 # Powerline-style segments
 set -g status-left-length 60
 set -g status-right-length 120
+set -g status-justify centre
 
 # Left side
-set -g status-left '#[bg=default,fg=colour162]#[bg=colour162,fg=colour82]#S #[fg=colour162,bg=colour82]#[fg=colour162,bg=colour82] #(whoami) #[fg=colour82,bg=default] '
+set -g status-left \
+  '#[fg=#608B4E,bg=default]#[fg=#262626,bg=#608B4E]#S #[fg=#608B4E,bg=#262626]#[fg=#608B4E,bg=#262626] #(whoami) #[fg=#262626,bg=default] '
 
 # Right side
-set -g status-right '#[fg=colour82,bg=default]#[fg=colour162,bg=colour82] %Y-%m-%d #[fg=colour162,bg=colour82]#[fg=colour82,bg=colour162] %H:%M#[fg=colour162,bg=default]'
+set -g status-right \
+  '#[fg=#262626,bg=default]#[fg=#608B4E,bg=#262626] %Y-%m-%d #[fg=#608B4E,bg=#262626]#[fg=#262626,bg=#608B4E] %H:%M#[fg=#608B4E,bg=default]'
 
 # General styling
 set -g status-style bg=default,fg=white
 
 # Inactive Window styles
 setw -g window-status-format \
-  '#[fg=colour162,bg=default]#[fg=colour162,bg=default] #I  #W #[fg=colour162,bg=default]'
+  '#[fg=#569CD6,bg=default]#[fg=#569CD6,bg=default]#I #W#[fg=#569CD6,bg=default]'
 
 # Active Window styles
 setw -g window-status-current-format \
-  '#[fg=colour82,bg=default]#[fg=colour162,bg=colour82,bold] #I  #W #[fg=colour82,bg=default]'
-
-
+  '#[fg=#569CD6,bg=default]#[fg=#262626,bg=#569CD6,bold]#I #W#[fg=#569CD6,bg=default]'
